# uniprot-mcp-server

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/uniprot_mcp_server/: __init__.py  server.py
tests/: test_server.py
