[project]
name = "uniprot-mcp-server"
version = "0.1.0"
description = "MCP server for UniProt protein data access"
authors = [{name = "UniProt MCP Server Contributors"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
uniprot-mcp-server = "uniprot_mcp_server:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true